--- a/.eslintrc
+++ b/.eslintrc
@@ -2,7 +2,7 @@
   "extends": ["react-app"],
   "plugins": ["prettier", "react-hooks"],
   "rules": {
-    "prettier/prettier": "warn",
+    "prettier/prettier": "error",
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn"
   }
