--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint-plugin-prettier": "^3.3.0",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "google-map-react": "^2.1.9",
     "jquery": "^3.5.1",
     "node-sass": "^4.14.1",
     "prettier": "^2.2.1",
