--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "react-datepicker": "^3.3.0",
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
+    "react-responsive-carousel": "^3.2.11",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-slick": "^0.27.13",
     "react-spinners": "^0.9.0",
     "web-vitals": "^0.2.4"
   },
