--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-bootstrap": "^1.4.0",
     "react-datepicker": "^3.3.0",
     "react-dom": "^17.0.1",
+    "react-elastic-carousel": "^0.10.0",
     "react-icons": "^4.1.0",
     "react-multi-carousel": "^2.6.1",
     "react-responsive-carousel": "^3.2.11",
@@ -36,6 +37,7 @@
     "react-spinners": "^0.9.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.1",
+    "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
