--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^17.0.1",
     "react-elastic-carousel": "^0.10.0",
     "react-icons": "^4.1.0",
+    "react-modern-calendar-datepicker": "^3.1.6",
     "react-multi-carousel": "^2.6.1",
     "react-responsive-carousel": "^3.2.11",
     "react-router-dom": "^5.2.0",
