--- a/Client/package.json
+++ b/Client/package.json
@@ -36,6 +36,7 @@
     "react-responsive-carousel": "^3.2.11",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-share": "^4.3.1",
     "react-spinners": "^0.9.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.1",
