--- a/Client/package.json
+++ b/Client/package.json
@@ -29,6 +29,7 @@
     "react": "^17.0.1",
     "react-accessible-accordion": "^3.3.3",
     "react-bootstrap": "^1.4.0",
+    "react-calendar": "^3.3.0",
     "react-datepicker": "^3.3.0",
     "react-dom": "^17.0.1",
     "react-elastic-carousel": "^0.10.0",
@@ -37,7 +38,6 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-share": "^4.3.1",
-    "react-spinners": "^0.9.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.1",
     "styled-components": "^5.2.1",
