--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "eslint-plugin-prettier": "^3.3.0",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "formik": "2.1.5",
+    "formik": "^2.1.5",
     "jquery": "^3.5.1",
     "node-sass": "^4.14.1",
     "prettier": "^2.2.1",
