--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "eslint-plugin-prettier": "^3.3.0",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "formik": "2.1.5",
     "google-map-react": "^2.1.9",
     "jquery": "^3.5.1",
     "lab": "^18.0.2",
@@ -30,9 +31,9 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-accessible-accordion": "^3.3.3",
+    "react-autocomplete": "^1.8.1",
     "react-bootstrap": "^1.4.0",
     "react-calendar": "^3.3.0",
-    "formik": "2.1.5",
     "react-client-session": "0.0.7",
     "react-datepicker": "^3.3.0",
     "react-dom": "^17.0.1",
