--- a/client/package.json
+++ b/client/package.json
@@ -36,13 +36,14 @@
     "react-bootstrap-sweetalert": "^5.2.0",
     "react-calendar": "^3.3.0",
     "react-client-session": "0.0.7",
+    "react-credit-cards": "^0.8.3",
     "react-datepicker": "^3.3.0",
     "react-dom": "^17.0.1",
     "react-elastic-carousel": "^0.10.0",
     "react-icons": "^4.1.0",
     "react-multi-carousel": "^2.6.1",
-    "react-responsive-carousel": "^3.2.11",
     "react-on-rails": "^12.0.5-beta.0",
+    "react-responsive-carousel": "^3.2.11",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-share": "^4.3.1",
