--- a/client/package.json
+++ b/client/package.json
@@ -53,6 +53,7 @@
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.1",
     "styled-components": "^5.2.1",
+    "sweetalert2": "^10.13.1",
     "ui": "^0.2.4",
     "web-vitals": "^0.2.4",
     "yup": "0.29.3"
